--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ p {
 
 .lg-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 /* Nav Bar */
 #navbar {
@@ -96,7 +97,7 @@ p {
   color: white;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -158,7 +159,7 @@ p {
 /* Home Info */
 
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img {
@@ -220,7 +221,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url("../img/test-bg.jpg") no-repeat center center/cover;
   padding-top: 100px;
 }
